--- a/index.html
+++ b/index.html
@@ -23,12 +23,37 @@
     </div>
   </dialog> -->
 
+  <div class="hidden" id="section-question">
+    <div class="central-section">
+      <!-- Pergunt -->
+      <div class="question">
+        pergunta
+      </div>
+      <!-- Opcoes -->
+      <div class="grid-options">
+        <!-- Esquerda -->
+        <div class="grid-option">
+          1
+          <span id="left-option" onclick="questionAnswer('left')">
+            esquerda
+          </span>
+        </div>
+        <!-- Direita -->
+        <div class="grid-option">
+          2
+          <span id="right-option" onclick="questionAnswer('right')">
+            esquerda
+          </span>
+        </div>
+      </div>
+    </div>
+  </div>
 
 
 
   <a-scene mindar-image="imageTargetSrc: ./luckyblock.mind;" color-space="sRGB"
     renderer="colorManagement: true, physicallyCorrectLights" vr-mode-ui="enabled: false"
-    device-orientation-permission-ui="enabled: false">
+    device-orientation-permission-ui="enabled: false" id="scan">
 
     <a-assets>
       <img id="lucky" src="./imagemRA.jpg">
@@ -41,31 +66,6 @@
     <a-entity mindar-image-target="targetIndex: 0">
       <a-plane position="0 0 0" height="0.552" width="1" rotation="0 0 0" src="#lucky" class="clickable"
         id="luckyPlane"></a-plane>
-      <div class="hidden" id="section-question">
-        <div class="central-section">
-          <!-- Pergunt -->
-          <div class="question">
-            pergunta
-          </div>
-          <!-- Opcoes -->
-          <div class="grid-options">
-            <!-- Esquerda -->
-            <div class="grid-option">
-              1
-              <span id="left-option" onclick="questionAnswer('left')">
-                esquerda
-              </span>
-            </div>
-            <!-- Direita -->
-            <div class="grid-option">
-              2
-              <span id="right-option" onclick="questionAnswer('right')">
-                esquerda
-              </span>
-            </div>
-          </div>
-        </div>
-      </div>
     </a-entity>
   </a-scene>
 
