--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
   <dialog class="show-score">
     <div class="square">
-      <h2>Score: <span id="score">0</span></h2>
+      <h2>Score: <span id="score">${score}</span></h2>
     </div>
   </dialog>
 
