--- a/camera/index.html
+++ b/camera/index.html
@@ -10,6 +10,7 @@
 
 <body>
   <dialog class="aviso">
+    <h4>Voltar</h4>
     <div class="aviso-modal">
       <h2>Score: <span id="score"></span></h2>
     </div>
