--- a/menuInicial/menuInicial.html
+++ b/menuInicial/menuInicial.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    
+
 
     <section id="sectionChoices">
         <div id="h1Menu">
@@ -19,11 +19,15 @@
 
         <!-- GAMES -->
         <div class="cardQuiz">
-            <a onclick="questionListSelected(1)"><img src="" alt=""></a>
+            <a onclick="questionListSelected(1)"><img
+                    src="https://img.freepik.com/fotos-premium/ilustracao-do-joystick-do-gamepad-do-controlador-de-jogos-cyberpunk_691560-5812.jpg"
+                    alt=""></a>
         </div>
         <!-- ESPORTES -->
         <div class="cardQuiz">
-            <a onclick="questionListSelected(2)"><img src="" alt=""></a>
+            <a onclick="questionListSelected(2)"><img
+                    src="https://s1.static.brasilescola.uol.com.br/be/conteudo/images/alguns-esportes-dependem-equipamentos-para-serem-praticados-5734865673029.jpg"
+                    alt=""></a>
         </div>
         <!-- MÚSICAS -->
         <div class="cardQuiz">
@@ -38,9 +42,21 @@
 
 
     <script>
+        if (localStorage.getItem("choiceList") != null) {
+            goScan();
+        }
+
+
         function questionListSelected(indexList) {
             localStorage.setItem("choiceList", indexList);
+            goScan();
         }
+
+
+        function goScan() {
+            window.location.href = "../camera/index.html"
+        }
+
     </script>
 </body>
 
